--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
       <div class="slides" id="slides">
         <img src="./assets/img1.jpg" alt="Image 1">
         <img src="./assets/img2.jpg" alt="Image 2">
-        <img src="./assets/img3.jpg" alt="Image 3">
-        <img src="./assets/img4.jpg" alt="Image 4">
-        <img src="./assets/img5.jpg" alt="Image 5">
-        <img src="./assets/img6.jpg" alt="Image 6">
-        <img src="./assets/img7.jpg" alt="Image 7">
         <img src="./assets/img8.jpg" alt="Image 8">
+        <img src="./assets/img6.jpg" alt="Image 6">
+        <!-- <img src="./assets/img5.jpg" alt="Image 5"> -->
+        <img src="./assets/img4.jpg" alt="Image 4">
+        <img src="./assets/img3.jpg" alt="Image 7">
+        <img src="./assets/img7.jpg" alt="Image 7">
       </div>
       <div class="slider-controls">
         <button onclick="prevSlide()">&#8249;</button>
@@ -184,7 +184,7 @@
         </div>
         <div class="lang ml">
           <p>
-            മലങ്കര ഓർത്തഡോക്സ് वृद्धാശ്രമം മുതിർന്ന പൗരന്മാർക്ക് കാരുണ്യപൂർണവും ആത്മീയവുമായ സംരക്ഷണമൊരുക്കുന്നു.
+            മലങ്കര ഓർത്തഡോക്സ് സഭയുടെ ആശ്രമം മുതിർന്ന പൗരന്മാർക്ക് കാരുണ്യപൂർണവും ആത്മീയവുമായ സംരക്ഷണമൊരുക്കുന്നു.
             ഓർത്തഡോക്സ് ക്രിസ്ത്യൻ വിശ്വാസത്തിൽ ഉറച്ചുനിൽക്കുന്ന ഞങ്ങളുടെ ആശ്രമം മാന്യമായ ജീവിതം, വ്യക്തിഗത പരിചരണം,
             സ്നേഹവും ആദരവുമുള്ള സമുദായം എന്നിവ ഉറപ്പാക്കുന്നു.
           </p>
@@ -242,14 +242,14 @@
         <h2 class="section-title">Contact Us / ഞങ്ങളെ സമീപിക്കുക</h2>
         <div class="lang en">
           <p>
-            Address: St. Mary's Campus, Church Road, Kerala, India<br />
+            Address : M G D Ashram & Karunabhavan, Near Kochuparambu, Karukachal, Kottayam Dist. Kerala - 686540<br />
             Phone:  +91- 6235443399, 9847776764, 9947057066.<br />
             Email: care@orthodoxoldagehome.org
           </p>
         </div>
         <div class="lang ml">
           <p>
-            വിലാസം: സെന്റ് മേരീസ് കാമ്പസ്, ചർച്ച് റോഡ്, കേരളം, ഇന്ത്യ<br />
+            വിലാസം : എം ജി ഡി ആശ്രമം & കരുണാഭവൻ, കൊച്ചുപറമ്പിന് സമീപം, കറുകച്ചാൽ, കോട്ടയം ജില്ല,കേരള-686540<br />
             ഫോൺ: ++91- 6235443399, 9847776764, 9947057066.<br />
             ഇമെയിൽ: care@orthodoxoldagehome.org
           </p>
