--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Malankara Orthodox Old Age Home. All rights reserved.
+    &copy; 2025 Malankara Orthodox Karunabhavan Karukachal. All rights reserved.
   </footer>
 
   <script>
