Added logo and changed the name of the header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       text-align: center;
     }
 
+    .logo {
+      height: 80px;
+      width: auto;
+      object-fit: contain;
+    }
+
     header h1 {
       margin: 0;
       font-size: 2.5rem;
@@ -144,8 +150,14 @@
 
 <body>
   <header>
-    <h1>Malankara Orthodox Old Age Home</h1>
-    <p>Care. Compassion. Community.</p>
+    <div class="header-content">
+      <img src="./assets/logo.jpg" alt="Church Logo" class="logo" />
+      <div class="header-text">
+        <h1>Malankara Orthodox Church</h1>
+        <h3>M.G.D. ASHRAM AND KARUNABHAVAN</h3>
+        <p>Care. Compassion. Community.</p>
+      </div>
+    </div>
   </header>
 
   <nav>
@@ -216,24 +228,12 @@
             Every contribution helps us extend our services to more elderly individuals in need. Your support provides food, shelter,
             medical care, and spiritual nourishment.
           </p>
-          <!-- <p><strong>Bank Details:</strong><br />
-            Malankara Orthodox Old Age Home<br />
-            A/C: 1234567890<br />
-            IFSC: ABCD0123456<br />
-            Bank: Orthodox Church Cooperative Bank
-          </p> -->
         </div>
         <div class="lang ml">
           <p>
             ഓരോ സംഭാവനയും സഹായം ആവശ്യമുള്ള കൂടുതൽ മുതിർന്നവർക്ക് ഞങ്ങളുടെ സേവനങ്ങൾ എത്തിക്കുന്നതിനു സഹായിക്കുന്നു.
             നിങ്ങളുടെ പിന്തുണ ആഹാരം, താമസം, വൈദ്യസഹായം, ആത്മീയ പോഷണം എന്നിവ നൽകുന്നു.
           </p>
-          <!-- <p><strong>ബാങ്ക് വിശദാംശങ്ങൾ:</strong><br />
-            മലങ്കര ഓർത്തഡോക്സ് वृद्धാശ്രമം<br />
-            അക്കൗണ്ട്: 1234567890<br />
-            IFSC: ABCD0123456<br />
-            ബാങ്ക്: ഓർത്തഡോക്സ് ചർച്ച് സഹകരണ ബാങ്ക്
-          </p> -->
         </div>
       </section>
       
